src/main/kotlin/com/msan/ngxformatidea/parser/Ngx.bnf
{
  parserClass = "com.example.ngx.parser.NgxParser"
  extends = "com.intellij.lang.parser.GeneratedParserUtilBase"
}

file ::= component*

component ::= "[component]" content? "[/component]"

content ::= TEXT
